summative.moria.Moria.scala.code
while(estFaceMur && getDirection()==Direction.EST) {
  setDirection(Direction.EST)
	while(!estSurbiscuit) {
  	avance()
	}
	prendBiscuit()
  retourne()
  while(!estSurbiscuit) {
  	avance()
  }
  recule(); poseBiscuit()
}
droite(); avance(); gauche(); avance()